--- a/theRecipeApp.html
+++ b/theRecipeApp.html
@@ -10,5 +10,5 @@
         <input type = "text" id = "inputField">
     </form>
 </body>
-<script src = "recipeApp.js"></script>
+<script src = "theRecipeApp.js"></script>
 </html>
