Commit 4: Sent data from API to console, added html

--- a/theRecipeApp.html
+++ b/theRecipeApp.html
@@ -8,7 +8,14 @@
 <body>
     <form>
         <input type = "text" id = "inputField">
+        <i class="fas fa-search submitBtn" id = "submitBtn"></i>
     </form>
+    <div id = "recipes">
+        <div>1</div>
+        <div>Italian Wedding Soup</div>
+        <div><img src="https://spoonacular.com/recipeImages/670998-312x231.jpg"></div>
+    </div>
 </body>
 <script src = "theRecipeApp.js"></script>
+<script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" data-auto-replace-svg="nest"></script>
 </html>
